--- a/D206_Paper.ipynb
+++ b/D206_Paper.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -32,7 +31,7 @@
    "id": "371b57c2-99d7-477c-a545-3f3e2f03ed41",
    "metadata": {},
    "source": [
-    "# Part I**: Research Question\n",
+    "# Part I: Research Question\n",
     "\n",
     "## A.  Describe one question or decision that you will address using the data set you chose. The summarized question or decision must be relevant to a realistic organizational need or situation.\n",
     "\n",
@@ -42,7 +41,7 @@
     "\n",
     "The variable descriptions are given in the file accompanying the data and are as follows:\n",
     "* **CaseOrder**: A placeholder variable to preserve the original order of the raw data file\n",
-    "* **Customer_id****: Unique customer ID \n",
+    "* **Customer_id**: Unique customer ID \n",
     "* **Interaction**: Unique IDs related to customer transactions, technical support, and sign-ups\n",
     "* **City**: Customer city of residence as listed on the billing statement\n",
     "* **State**: Customer state of residence as listed on the billing statement\n",
@@ -98,7 +97,7 @@
     "# Part II: Data-Cleaning Plan\n",
     " \n",
     "## C.  Explain the plan for cleaning the data by doing the following:\n",
-    "   ### 1.  Propose a plan that includes the relevant techniques and specific steps needed to identify anomalies in the data set.\n",
+    "### 1.  Propose a plan that includes the relevant techniques and specific steps needed to identify anomalies in the data set.\n",
     "    \n",
     "   I will clean the data using these steps:\n",
     "   1. Import the data using pandas and Python into a Jupyter Notebook File\n",
@@ -115,6 +114,7 @@
     "\n",
     "   *  characteristics of the data being assessed.\n",
     "   *  the approach used to assess the quality.\n",
+    "   \n",
     "### 3.  Justify your selected programming language and any libraries and packages that will support the data-cleaning process.\n",
     "\n",
     "I chose Python since it has such a rich collection of libraries for data analysis.\n",
@@ -440,10 +440,22 @@
    "source": [
     "**E.  Apply principal component analysis (PCA) to identify the significant features of the data set by doing the following:**\n",
     "\n",
-    "    1.  List the principal components in the data set.\n",
-    "    2.  Describe how you identified the principal components of the data set.\n",
-    "    3.  Describe how the organization can benefit from the results of the PCA\n",
-    " \n"
+    "   1.  List the principal components in the data set.\n",
+    "   \n",
+    "   * 'Contacts'\n",
+    "   * 'Tenure'\n",
+    "   * 'MonthlyCharge'\n",
+    "   * 'Bandwidth_GB_Year'\n",
+    "   * 'options'\n",
+    "    \n",
+    "   2.  Describe how you identified the principal components of the data set.\n",
+    "   \n",
+    "The principal components of the data set are the components that after normalizing the data and applying the provided code to figure out the eigenvalue chart for the data had an eigenvalue of greater than one, meaning that they accounted for a greated amount of the variance than other variables. These were found by normalizing the data with StandardScalar from sklearn, then applying PCA from sklearn and plotting the findings of the algorithm.\n",
+    "       \n",
+    "   3.  Describe how the organization can benefit from the results of the PCA\n",
+    "   \n",
+    "PCA can help identify the numeric variables that account the most for the the variance in the data. This can be used to reduce the number of variables in the data to only the ones that account most for other data and makes analysis and machine learning more efficient.\n",
+    "    \n"
    ]
   },
   {
@@ -452,16 +464,28 @@
    "metadata": {},
    "source": [
     "\n",
-    "Part IV. Supporting Documents\n",
+    "# Part IV. Supporting Documents\n",
     "\n",
-    "F.  Provide a Panopto recording that demonstrates the warning- and error-free functionality of the code used to support the discovery of anomalies and the data cleaning process and summarizes the programming environment.\n",
+    "**F.  Provide a Panopto recording that demonstrates the warning- and error-free functionality of the code used to support the discovery of anomalies and the data cleaning process and summarizes the programming environment.**\n",
     " \n",
+    "https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2facbf21-0d55-4103-8d22-add7013b26f1\n",
     " \n",
-    "G.  Reference the web sources used to acquire segments of third-party code to support the application. Be sure the web sources are reliable.\n",
-    " No third party code was used.\n",
+    "**G.  Reference the web sources used to acquire segments of third-party code to support the application. Be sure the web sources are reliable.**\n",
+    "\n",
+    "No third party code outside of that provided by WGU was used.\n",
     " \n",
-    "H.  Acknowledge sources, using in-text citations and references, for content that is quoted, paraphrased, or summarized.\n"
+    "**H.  Acknowledge sources, using in-text citations and references, for content that is quoted, paraphrased, or summarized.**\n",
+    "\n",
+    "Churn data provided by WGU and code for finding eigenvalues provided by WGU.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93651c94-e0ac-4f3f-bd08-bdb3c8eb3287",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
