remove dupe file

--- a/D206_code.ipynb
+++ b/D206_code.ipynb
@@ -18,43 +18,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96004c3b-50d7-4ff5-95ba-0486dd80a075",
+   "id": "100a8ab5-9d7a-4e48-9d78-0c8f9867a5a4",
    "metadata": {},
    "source": [
     "# Part I: Research Question\n",
     "\n",
     "## A.  Describe one question or decision that you will address using the data set you chose. The summarized question or decision must be relevant to a realistic organizational need or situation.\n",
     "\n",
-    "The research question in this case would be can we predict customer churn rate based on customer data.\n",
+    "The research question in this case would be: can we predict customer churn rate based on customer data?\n",
     " \n",
-    "## B.  Describe the variables in the data set and indicate the specific type of data being described. Use examples from the data set that support your claims.\n",
-    "\n",
-    "Income                  float64\n",
-    "Marital                  object\n",
-    "Gender                   object\n",
-    "Churn                    object\n",
-    "Outage_sec_perweek      float64\n",
-    "Email                     int64\n",
-    "Contacts                  int64\n",
-    "Yearly_equip_failure      int64\n",
-    "Techie                   object\n",
-    "Contract                 object\n",
-    "Port_modem               object\n",
-    "Tablet                   object\n",
-    "InternetService          object\n",
-    "Phone                    object\n",
-    "Multiple                 object\n",
-    "OnlineSecurity           object\n",
-    "OnlineBackup             object\n",
-    "DeviceProtection         object\n",
-    "TechSupport              object\n",
-    "StreamingTV              object\n",
-    "StreamingMovies          object\n",
-    "PaperlessBilling         object\n",
-    "PaymentMethod            object\n",
-    "Tenure                  float64\n",
-    "MonthlyCharge           float64\n",
-    "Bandwidth_GB_Year       float64\n",
+    "## B.  Describe the variables in the data set and indicate the specific type of data being described. Use examples from the data set that support your claims."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96004c3b-50d7-4ff5-95ba-0486dd80a075",
+   "metadata": {},
+   "source": [
+    "* **Income**                  float64\n",
+    "* **Marital**                  object\n",
+    "* **Gender**                   object\n",
+    "* **Churn**                    object\n",
+    "* **Outage_sec_perweek**      float64\n",
+    "* **Email**                     int64\n",
+    "* **Contacts**                  int64\n",
+    "* **Yearly_equip_failure**      int64\n",
+    "* **Techie**                   object\n",
+    "* **Contract**                 object\n",
+    "* **Port_modem**               object\n",
+    "* **Tablet**                   object\n",
+    "* **InternetService**          object\n",
+    "* **Phone**                    object\n",
+    "* **Multiple**                 object\n",
+    "* **OnlineSecurity**           object\n",
+    "* **OnlineBackup**             object\n",
+    "* **DeviceProtection**         object\n",
+    "* **TechSupport**              object\n",
+    "* **StreamingTV**              object\n",
+    "* **StreamingMovies**          object\n",
+    "* **PaperlessBilling**         object\n",
+    "* **PaymentMethod**            object\n",
+    "* **Tenure**                  float64\n",
+    "* **MonthlyCharge**           float64\n",
+    "* **Bandwidth_GB_Year**       float64\n",
     "\n",
     "\n",
     "The variable descriptions are given in the file accompanying the data and are as follows:\n",
@@ -9423,7 +9429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
